Fix skills section alignment

--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ section {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 
 article {
